# tcl-cpp-interface

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  howto.md
cmake/: compiler_setup.cmake  sanitizers.cmake
examples/extend/: CMakeLists.txt  README.md  main.cpp
include/tcl++/commands/: ArgValidator.h  UnixCommandParser.h
include/tcl++/common/: stashing_reverse_iterator.h
include/tcl++/core/: BaseCommand.h  Dict.h  Exception.h  Interp.h  List.h  NumericTypes.h  Object.h  String.h  WideInt.h  defs.h
include/tcl++/extend/: defs.h
include/tcl++/util/: span.h
src/: CMakeLists.txt  Dict.cpp  Dict.h  Interp.cpp  Interp.h  List.cpp  List.h  Object.cpp  Object.h  String.cpp  defs.h  main.cpp
src/commands/: CMakeLists.txt  UnixCommandParser.cpp
src/core/: CMakeLists.txt  Dict.cpp  Interp.cpp  List.cpp  NumericTypes.cpp  Object.cpp  String.cpp
tests/commands/: CMakeLists.txt  main.cpp  unix_cmd_parser.cpp
tests/core/: CMakeLists.txt  list.cpp  object.cpp  string.cpp  string_rep.cpp  test.cpp
